--- a/composer.json
+++ b/composer.json
@@ -18,4 +18,9 @@
       "sample\\sampleModule\\": ""
     }
   }
+  "repositories": [
+        {
+            "type": "git",
+            "url": "https://github.com/rajudiya/sampleModule"
+        },
 }
