--- a/composer.json
+++ b/composer.json
@@ -2,13 +2,13 @@
   "name": "sample/sampleModule",
   "description": "This is a Sample Module",
   "type": "magento2-module",
-  "version": "1.0.0",
+  "version": "*",
   "license": [
     "OSL-3.0",
     "AFL-3.0"
   ],
   "require": {
-      "php": "~8.1.0"
+      "php": "*"
   },
   "autoload": {
     "files": [
