--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
   "name": "sample/sampleModule",
   "description": "This is a Sample Module",
   "type": "magento2-module",
+  "version": "2.4.2",
   "license": [
     "OSL-3.0",
     "AFL-3.0"
