--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     "AFL-3.0"
   ],
   "require": {
-      "php": "~7.3.0||~7.4.0||~8.0.0",
+      "php": "~7.3.0||~7.4.0||^8.0.0",
       "magento/framework": "102.0.*|103.0.*",
       "salecto2/magento2-admin-theme": "*"
   },
