--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "sample/sampleModule",
+  "name": "sample/samplemodule",
   "description": "Sample Module quick Install",
   "type": "magento2-module",
   "version": "1.0.0",
